--- a/MathGame/pokemon.css
+++ b/MathGame/pokemon.css
@@ -211,7 +211,7 @@ body.overlay-is-open .main-ui,
   }
 
   100% {
-    background-color: rgba(207, 207, 207, 0.4);;
+    background-color: rgba(207, 207, 207, 0.705);
     transform: scale(1);
   }
 }
@@ -223,7 +223,7 @@ body.overlay-is-open .main-ui,
   }
 
   100% {
-    background-color: rgba(207, 207, 207, 0.4);;
+    background-color: rgba(207, 207, 207, 0.705);
     transform: scale(1);
   }
 }
