--- a/MathGame/pokemon.css
+++ b/MathGame/pokemon.css
@@ -19,7 +19,6 @@ body {
   padding-right: 10px;
 }
 
-
 .input {
   display: flex;
   justify-content: center;
@@ -104,32 +103,13 @@ input {
 .pokeball {
   background-position: center;
   align-items: center;
-  border: 4px solid #000;
-  background-image: linear-gradient(#C53030 0%, #C53030 48%, #000 48%, #000 52%, #fff 52%, #fff 100%);
+  background-image: url("pokeball.svg");
   cursor: pointer;
   display: block;
-  height: 100px; 
-  width: 100px; 
-  border-radius: 100%;
-  box-shadow: inset 3px 3px 0 rgba(255,255,255,.2),
-              inset -5px -8px rgba(0,0,0,.2);
+  height: 150px; 
+  width: 150px; 
   margin-left: auto;
   margin-right: auto;
-}
-
-.pokeball::before {
-  background-position: center;
-  content: "";
-  border: 4px solid #000;
-  position: relative;
-  display: block;
-  top: 37px;
-  left: 37px;
-  height: 20px;
-  width: 20px;
-  border-radius: 100%;
-  background-color: #fff;
-  box-shadow: inset 2px 2px 0 rgba(0,0,0,.2);
 }
 
 .progress {
@@ -271,8 +251,8 @@ body.overlay-is-open .main-ui,
 .pokemon-shiny {
   background-image: linear-gradient(45deg, #fff006, transparent);
   background-size: 110% 110%;
-  animation: shiny-animate 10s ease infinite alternate-reverse;
 }
+
 .legendary {
   outline: solid rgba(252, 93, 20, 0.4);
 }
