--- a/MathGame/customizer.css
+++ b/MathGame/customizer.css
@@ -94,3 +94,25 @@
   .categoryname {
     font-size: 36px;
   }
+
+  .barcode {
+    padding: 1.5em;
+    background: rgba(206, 206, 206, 0.551);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+
+
+  }
+  .barcode:empty {
+    -webkit-animation: fadeIn 2s;
+    animation: fadeIn 2s;
+
+  }
+
+  @-webkit-keyframes fadeIn {
+    from { opacity: 0; height: 0; size: 0}
+      to { opacity: 1; height: auto;  size: auto; }
+  }
+  @keyframes fadeIn {
+    from { opacity: 0; height: 0; size: 0}
+      to { opacity: 1; height: auto;  size: auto; }
+  }
