--- a/MathGame/dex.css
+++ b/MathGame/dex.css
@@ -17,15 +17,53 @@
 .btn {
   border: 5px rgba(255, 255, 255, 0) solid;;
   outline: none;
-  padding: 12px 16px;
+  padding: 14px 20px 12px;
   background-color: #f1f1f1;
   cursor: pointer;
   min-width: 80px;
+  border-bottom: 1px solid #ddd;
+  height: 50px;
+}
+
+.altbtn {
+  border: 5px rgba(255, 255, 255, 0) solid;;
+  outline: none;
+  padding: 14px 20px 12px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  min-width: 80px;
+  border-bottom: 1px solid #ddd;
+  height: 50px;
 }
 
 /* Add a light grey background on mouse-over */
 .btn:hover {
   background-color: #ddd;
+}
+
+.altbtn:hover {
+  background-color: #ddd;
+}
+
+.typecard2 {
+  border: 5px rgba(255, 255, 255, 0) solid;;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  width: 40px;
+  height: 15px;
+  min-width: 40px;
+  min-height: 15px;
+  align-items: center;
+  border-radius: 4px;
+  display: inline-flex;
+  font-size: 0.75rem;
+  justify-content: center;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  white-space: nowrap;
+  color: #F8F8F8;
 }
 
 /* Add a dark background to the active button */
@@ -34,7 +72,19 @@
   color: white;
   border: 5px #000 solid;
 }
+.typecard2.active {
+  background-color: #666;
+  color: white;
+  border: 5px #000 solid;
+}
+
 .btn.active {
+  background-color: rgb(56, 55, 55);
+  color: white;
+  border: 5px #000 solid;
+}
+
+.altbtn.altactive {
   background-color: rgb(56, 55, 55);
   color: white;
   border: 5px #000 solid;
@@ -47,9 +97,10 @@
   background-position: 14px 12px;
   background-repeat: no-repeat;
   font-size: 16px;
-  padding: 14px 20px 12px 45px;
+  padding: 13px 20px 11px 45px;
   border: none;
   border-bottom: 1px solid #ddd;
+  margin-right: 5px;
 }
 #searchInput:focus {outline: 3px solid #ddd;}
 
@@ -71,4 +122,23 @@
 
 .statisticText:after{
   content: attr(data-text);
+}
+
+.typedropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.typecontent {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 240px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.typedropdown:hover .typecontent {
+  display: block;
 }
