--- a/MathGame/dex.css
+++ b/MathGame/dex.css
@@ -131,7 +131,7 @@
 
 .typecontent {
   display: none;
-  position: absolute;
+  position: sticky;
   background-color: #f9f9f9;
   width: 240px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
