--- a/MathGame/menustyle.css
+++ b/MathGame/menustyle.css
@@ -118,6 +118,8 @@
   bottom: 50px;
   border-radius:5px;
   box-shadow:0 0 15px 5px #ccc;
+  overflow: scroll;
+  max-height: 30%;
 }
 .close{
   position:absolute;
@@ -132,6 +134,12 @@
   text-align:center;
   font-size:1.6em;
   cursor:pointer;
+}
+
+.alert .date {
+  font-size:0.8em;
+  color:rgba(104, 104, 104, 0.548);
+  overflow:hidden;
 }
 
 .simple-alert {
