--- a/MathGame/customizer.css
+++ b/MathGame/customizer.css
@@ -116,3 +116,8 @@
     from { opacity: 0; height: 0; size: 0}
       to { opacity: 1; height: auto;  size: auto; }
   }
+
+.card-title {
+    font-size: 16px;
+    overflow-wrap: break-word;
+  }
