--- a/MathGame/christmas.css
+++ b/MathGame/christmas.css
@@ -9,8 +9,9 @@
   flex-direction: column;
   background: linear-gradient(#123, #111);
   overflow: hidden;
-  height: 150%;
+  height: 100%;
   margin-bottom: 0px;
+  box-sizing: border-box;
 }
 .above-calendar {
   font-family: 'Source Sans Pro', sans-serif;
@@ -19,7 +20,6 @@
   padding: 10px;
 }
 .not-christmas-yet {
-  
   margin: auto;
   width: 50%;
   height: 70%;
@@ -32,16 +32,24 @@
 /* calendar layout */
 .calendar-container {
   box-sizing: border-box;
-  width: 90%;
-  aspect-ratio: 16 / 9;
+  width: 90vw;
+  height: 50.625vw; /*aspect ratio math*/
+  /*height: calc((9/16)*90%);*/
+  max-width: 1980px;
+  max-height: 1080px;
+  min-width: 198px;
+  min-height: 108px;
+  /*aspect-ratio: 16 / 9;*/
+
   border: 5px solid rgb(250, 208, 93);
   margin: 15px auto;
   background-image: url("./images/backgrounds/bg-019.png");
   background-size: cover;
+  background-repeat: no-repeat;
   box-shadow: 0px 0px 20px rgb(240, 207, 117);
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(4, 25.0%);
+  grid-template-rows: repeat(6, 16.6%);
   
   grid-template-areas: 
   "door9 door6 door11 door7"
@@ -81,6 +89,7 @@
   background-size: cover;
   background-position: center;
   text-align: center;
+  
 }
 
 
@@ -99,6 +108,7 @@
 }
 .calendar-grid .door {
   width: 100%;
+  height: 100%;
   transform-style: preserve-3d;
   transition: all 300ms;
   border: 2px dashed rgba(0, 0, 0, 0.2);
