--- a/MathGame/christmas.css
+++ b/MathGame/christmas.css
@@ -11,7 +11,10 @@
   overflow: hidden;
   height: 100%;
   margin-bottom: 0px;
+  font-size: 2vw;
   box-sizing: border-box;
+  
+  
 }
 .above-calendar {
   font-family: 'Source Sans Pro', sans-serif;
@@ -43,7 +46,7 @@
 
   border: 5px solid rgb(250, 208, 93);
   margin: 15px auto;
-  background-image: url("./images/backgrounds/bg-019.png");
+  background-image: url("./images/backgrounds/bg-020.png");
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 0px 0px 20px rgb(240, 207, 117);
@@ -81,31 +84,29 @@
   transform-origin: 0% 50%;
   transition: all 2.5s, opacity 1s;
   animation: animatedBackground 4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+  font-size: 2vw;
+  padding-left: 5px;
 }
-
 
 .calendar-image {
   background-image: none;
   background-size: cover;
   background-position: center;
   text-align: center;
-  
 }
-
 
 .text {
   height: 100%;
   width: 100%;
   color: white;
-  padding: 10px;
+  padding: 0px;
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.7);
 }
 
-@media only screen and (min-width: 576px) {
-  .calendar-grid .title h1 {
-    font-size: 5rem;
-    flex-direction: column;
-  }
-}
 .calendar-grid .door {
   width: 100%;
   height: 100%;
@@ -123,7 +124,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #10303c;
+  color: #121212;
   font-size: 3em;
   font-weight: bold;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.2);
