--- a/MathGame/menustyle.css
+++ b/MathGame/menustyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=impact');
+
 .bigcard {
   background-color: #fff;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.5), 0 0 0 1px rgba(10, 10, 10, 0.2);
