--- a/MathGame/pokeviewer.css
+++ b/MathGame/pokeviewer.css
@@ -95,11 +95,12 @@ button:hover {
 
 #poke-details {
   display: inline-flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  align-items: stretch;
+  align-items: flex-start;
   width: 100%;
-  height: 110%;
+  height: 100%;
+  justify-content: space-evenly;
 }
 
 .evolution-wrapper{
